Fixed the size of form on desktop and should be perfect on mobile

--- a/CSS/signup_info.css
+++ b/CSS/signup_info.css
@@ -19,11 +19,8 @@ footer{
     border-radius: 20px;
     background-color: rgb(248, 248, 248);
 }
-.email{
-    margin-bottom: 10px;
-}
-.temp{
-    margin-bottom: 30px;
+.form-center{
+   place-self: center;
 }
 .top{
     width:400px;
